add part of alumn edit

--- a/appsettings.json
+++ b/appsettings.json
@@ -1,5 +1,5 @@
 {
     "ConnectionStrings": {
-        "DefaultConnection": "Server=DESKTOP-KSTQ195\\SQLEXPRESS;Database=kalum_2021;User Id=kalum;Password=kinal.2021;"
+        "DefaultConnection": "Server=DESKTOP-E21JIQR\\SQLEXPRESS;Database=kalum_2021;User Id=kalum1;Password=kinal.2021;"
     }
 }
